# pyaltibase

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.e2e.yml  docker-compose.test.yml  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  create-release.yml  publish-pypi.yml
docker/: e2e.Dockerfile
docs/: README.md  agent-playbook.md  api.md  architecture.md  connection.md  errors.md  faq.md  index.md  installation.md  llms-full.txt  llms.txt  quickstart.md  testing.md  types.md
pyaltibase/: __init__.py  config.py  connection.py  cursor.py  exceptions.py  protocol.py  types.py
scripts/: generate_llms_full.py
tests/: fakes.py  test_api.py  test_connection.py  test_cursor.py  test_exceptions.py  test_protocol.py  test_types.py
tests/e2e/: test_e2e_smoke.py
